--- a/src/assets/scss/modules/_fonts.scss
+++ b/src/assets/scss/modules/_fonts.scss
@@ -9,6 +9,15 @@
 
 @font-face {
     font-family: 'Metropolis';
+    src: url('../../fonts/Semibold/Metropolis-SemiBold.woff2') format('woff2'),
+        url('../../fonts/Semibold/Metropolis-SemiBold.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Metropolis';
     src: url('../../fonts/Bold/Metropolis-Bold.woff2') format('woff2'),
         url('../../fonts/Bold/Metropolis-Bold.woff') format('woff');
     font-weight: 700;
@@ -16,11 +25,4 @@
     font-display: swap;
 }
 
-@font-face {
-    font-family: 'Metropolis Semi';
-    src: url('../../fonts/Semibold/Metropolis-SemiBold.woff2') format('woff2'),
-        url('../../fonts/Semibold/Metropolis-SemiBold.woff') format('woff');
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-}
+
