--- a/src/app/pages/address/address-form/address-form.component.html
+++ b/src/app/pages/address/address-form/address-form.component.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid class="ion-padding-top ion-padding-horizontal h-100">
+  <ion-grid class="ion-margin-top ion-no-padding h-100">
     <ion-row class="ion-justify-content-between">
       <ion-col size="12">
         <form [formGroup]="fg" *ngIf="fg">
@@ -41,20 +41,18 @@
             >
           </ion-item>
 
-          <ion-row class="ion-align-items-center ion-padding">
+          <div class="divider"></div>
+
+          <ion-row class="ion-align-items-center ion-padding-horizontal ion-padding-bottom">
             <ion-col size="6" class="ion-no-padding">
-              <ion-text size="small"
-                ><small>{{ 'DELIVERY_ADDRESS' | translate }}</small></ion-text
-              >
+              <ion-text>
+                <small>
+                  <b>{{ 'DELIVERY_ADDRESS' | translate }}</b>
+                </small>
+                </ion-text>
             </ion-col>
             <ion-col size="6" class="ion-no-padding ion-text-right">
-              <ion-button
-                fill="outline"
-                shape="round"
-                size="small"
-                color="secondary"
-                (click)="presentModalPinLocation()"
-              >
+              <ion-button fill="outline" size="small" color="primary" (click)="presentModalPinLocation()">
                 {{ 'PIN_LOCATION' | translate }}
               </ion-button>
             </ion-col>
@@ -172,12 +170,12 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12">
-        <ion-button expand="block" shape="round" (click)="submit()" [disabled]="fg?.invalid">
-          {{ 'NEXT' | translate }}
+        <ion-button expand="block" shape="round" color="limegreen" (click)="submit()" [disabled]="fg?.invalid">
+          {{ 'SAVE' | translate }}
         </ion-button>
       </ion-col>
       <ion-col size="12" *ngIf="addressId && !addressData?.is_default">
-        <ion-button (click)="confirmDeleteAddress()" expand="block" shape="round" color="danger">
+        <ion-button (click)="confirmDeleteAddress()" expand="block" fill="outline" color="limegreen">
           {{ 'DELETE_ADDRESS' | translate }}
         </ion-button>
       </ion-col>
