--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,4 +1,4 @@
-<ion-header class="ion-no-border">
+<ion-header class="ion-no-border" style="visibility: hidden;">
   <ion-toolbar mode="ios"></ion-toolbar>
 </ion-header>
 
