--- a/src/app/pages/product/product-detail/product-detail.component.scss
+++ b/src/app/pages/product/product-detail/product-detail.component.scss
@@ -14,9 +14,63 @@ ion-header {
   color: #454545;
   &-label {
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 700;
     line-height: 1.17;
     letter-spacing: normal;
     color: #454545;
   }
+}
+
+.product {
+  &-brand {
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 1.5;
+    letter-spacing: normal;
+    color: #454545;
+    text-transform: capitalize;
+  }
+  &-name {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.07;
+    letter-spacing: normal;
+    color: #454545;
+    text-transform: capitalize;
+  }
+  &-size {
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 1.5;
+    color: #454545;
+    width: 95px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  &-final-price {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.3;
+    color: #99cc33;
+    width: 95px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  &-price {
+    font-size: 14px;
+    width: 95px;
+    font-weight: 700;
+    line-height: 3.4;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    vertical-align: super;
+    color: #f8a345;
+  }
+}
+
+.price-linethrough {
+  text-decoration: line-through;
 }
