--- a/src/app/pages/qr/qr.page.html
+++ b/src/app/pages/qr/qr.page.html
@@ -6,7 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content color="success" [fullscreen]="true">
+<ion-content color="limegreen" [fullscreen]="true">
   <ion-grid class="ion-padding-top ion-padding-horizontal h-100">
     <ion-row class="ion-justify-content-between">
       <ion-col size="12" class="ion-no-padding">
@@ -22,12 +22,12 @@
   <ion-grid>
     <ion-row>
       <ion-col size="6">
-        <ion-button expand="block" shape="round" (click)="changeMode('scan')" [disabled]="!isShow">
+        <ion-button expand="block" (click)="changeMode('scan')" [disabled]="!isShow">
           {{'SCAN_QR' | translate}}
         </ion-button>
       </ion-col>
       <ion-col size="6">
-        <ion-button expand="block" shape="round" (click)="changeMode('show')" [disabled]="isShow">
+        <ion-button expand="block" (click)="changeMode('show')" [disabled]="isShow">
           {{'SHOW_QR' | translate}}
         </ion-button>
       </ion-col>
