--- a/src/app/pages/qr/show-qr/show-qr.component.html
+++ b/src/app/pages/qr/show-qr/show-qr.component.html
@@ -1,6 +1,6 @@
 <ion-row>
   <ion-col size="12" class="ion-text-center">
-    <ion-text color="light">
+    <ion-text>
       <h3>{{ 'YOUR_QR_CODE' | translate }}</h3>
     </ion-text>
   </ion-col>
