--- a/src/app/pages/bundling/bundling-detail/bundling-detail.component.html
+++ b/src/app/pages/bundling/bundling-detail/bundling-detail.component.html
@@ -15,7 +15,7 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-card class="ion-no-border ion-no-margin-bottom">
+        <ion-card class="ion-no-border ion-no-margin">
           <ion-card-header class="ion-no-padding" *ngIf="bundling?.image_url">
             <img [src]="bundling?.image_url" class="full-width img-header" />
           </ion-card-header>
@@ -35,7 +35,7 @@
         </ion-card>
       </ion-col>
     </ion-row>
-    <ion-row class="padding-product">
+    <ion-row>
       <ion-col size="4" *ngFor="let item of products">
         <app-card-product [product]="item"></app-card-product>
       </ion-col>
