--- a/src/app/pages/bundling/bundling-detail/bundling-detail.component.scss
+++ b/src/app/pages/bundling/bundling-detail/bundling-detail.component.scss
@@ -7,6 +7,9 @@
 
 .bundling-title {
   text-transform: capitalize;
-  font-weight: bold;
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.19;
+  letter-spacing: normal;
+  color: #0f447a;
 }
