--- a/src/app/pages/cart/cart.page.html
+++ b/src/app/pages/cart/cart.page.html
@@ -8,8 +8,8 @@
   <ion-refresher slot="fixed" (ionRefresh)="pullToRefresh($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
-  <ion-grid class="ion-padding-top ion-padding-horizontal h-100">
-    <ion-row class="ion-justify-content-between">
+  <ion-grid class="ion-margin-top ion-no-padding h-100">
+    <ion-row class="ion-padding-horizontal ion-justify-content-between">
       <ion-col size="12">
         <app-item-list
           [cartData]="cartList"
@@ -18,7 +18,13 @@
         ></app-item-list>
       </ion-col>
     </ion-row>
+    <div class="divider"></div>
     <ion-row class="ion-margin-top">
+      <ion-col size="12" style="padding-left: 16px">
+        <span class="section-description">{{'CART_EXTRA' | translate }}</span>
+      </ion-col>
+    </ion-row>
+    <ion-row>
       <ion-col size="12">
         <app-slide-product [products]="relatedProductList"></app-slide-product>
       </ion-col>
@@ -35,7 +41,7 @@
           <span><b>Rp. {{totalPrice | number}}</b></span>
         </ion-col>
         <ion-col size="6" class="ion-text-right" [routerLink]="['/checkout']">
-          <ion-button color="primary" size="small" shape="round"> {{'CHECKOUT' | translate}} </ion-button>
+          <ion-button color="limegreen" size="small"> {{'CHECKOUT' | translate}} </ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
