--- a/src/app/pages/favorite/favorite-detail/favorite-detail.component.html
+++ b/src/app/pages/favorite/favorite-detail/favorite-detail.component.html
@@ -12,6 +12,7 @@
     <ion-item lines="none" *ngFor="let item of productFavorites; let i = index">
       <ion-checkbox
         slot="start"
+        color="limegreen"
         class="product-checkbox"
         [ngModel]="item?.selected"
         (ngModelChange)="toggleSelect(i)"
@@ -33,20 +34,20 @@
         </ion-row>
         <ion-row>
           <ion-col size="6">
-            <ion-text class="product-variant">{{ item?.product?.weight }}g/pcs</ion-text>
+            <ion-text class="product-size">Size: {{ item?.product?.weight }} {{ item?.product?.unit?.name }}</ion-text>
           </ion-col>
           <ion-col size="6" class="ion-text-right">
-            <ion-text class="product-price">Rp. {{ item?.product?.primary_price | number: '1.0-0':'id' }}</ion-text>
+            <ion-text class="product-final-price">Rp. {{ item?.product?.primary_price | number: '1.0-0':'id' }}</ion-text>
           </ion-col>
         </ion-row>
-        <ion-row>
+        <!-- <ion-row>
           <ion-col>
             <ion-text class="product-price-with-unit">
               Rp. {{ item?.product?.primary_price | number: '1.0-0':'id' }}
               <span class="product-unit">/{{ item?.product?.unit?.name }}</span>
             </ion-text>
           </ion-col>
-        </ion-row>
+        </ion-row> -->
       </ion-grid>
     </ion-item>
   </ion-list>
