--- a/src/app/pages/favorite/favorite-detail/favorite-detail.component.scss
+++ b/src/app/pages/favorite/favorite-detail/favorite-detail.component.scss
@@ -2,22 +2,64 @@
   font-size: 10px;
 }
 
+.product {
+  &-brand {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 2.17;
+    letter-spacing: normal;
+    color: #707070;
+    text-transform: capitalize;
+  }
+  &-name {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 1.07;
+    letter-spacing: normal;
+    color: #454545;
+    text-transform: capitalize;
+  }
+  &-size {
+    font-size: 10px;
+    font-weight: normal;
+    line-height: 1.5;
+    color: #454545;
+    width: 95px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  &-price {
+    font-size: 10px;
+    width: 95px;
+    font-weight: 700;
+    line-height: 3.4;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    vertical-align: super;
+    color: #f8a345;
+  }
+  &-final-price {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 1.3;
+    color: #99cc33;
+    width: 95px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+
+.product-img {
+  width: 200px;
+  height: 80px;
+  object-fit: contain;
+}
+
 .product-checkbox {
   margin-right: 16px;
-}
-
-.product-name {
-  font-size: 14px;
-}
-
-.product-variant {
-  font-size: 10px;
-  color: gray;
-}
-
-.product-price {
-  font-weight: bold;
-  font-size: 14px;
 }
 
 .product-price-with-unit {
