Fix product list padding

--- a/src/app/pages/product/product-detail/product-detail.component.scss
+++ b/src/app/pages/product/product-detail/product-detail.component.scss
@@ -89,6 +89,7 @@ ion-header {
 ion-searchbar.custom-search {
   height: 36px;
   padding: 12px !important;
+  margin-top: -1px;
 
   .searchbar-input-container input {
   padding-left: 30px !important;
