--- a/src/app/pages/product/product-search/product-search.component.html
+++ b/src/app/pages/product/product-search/product-search.component.html
@@ -6,7 +6,7 @@
     </ion-buttons>
   </ion-toolbar>
   <ion-toolbar mode="ios">
-    <div class="ion-padding-start">
+    <div>
       <ion-searchbar
         class="custom-search"
         mode="ios"
