--- a/src/app/shared/common/cards/card-brand/card-brand.component.scss
+++ b/src/app/shared/common/cards/card-brand/card-brand.component.scss
@@ -1,7 +1,8 @@
 .brand-icon {
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
   object-fit: cover;
+  border-radius: 60px
 }
 
 .brand-name {
