--- a/src/app/shared/common/modals/modal-filter-product/modal-filter-product.component.html
+++ b/src/app/shared/common/modals/modal-filter-product/modal-filter-product.component.html
@@ -2,15 +2,14 @@
   <ion-grid class="ion-padding-horizontal">
     <ion-row class="ion-no-padding">
       <ion-col size="12" class="ion-no-padding">
-        <ion-row class="ion-no-padding">
-          <ion-col class="ion-no-padding ion-padding-top">
+        <ion-row class="ion-no-padding ion-align-items-center">
+          <ion-col class="ion-no-padding">
             <ion-text class="filter-title"> {{ 'FILTER' | translate }}</ion-text> <br />
           </ion-col>
           <ion-col class="ion-text-right ion-no-padding-end">
             <ion-icon name="close" color="light" (click)="dismiss()"></ion-icon>
           </ion-col>
         </ion-row>
-        <div class="divider"></div>
       </ion-col>
     </ion-row>
   </ion-grid>
