--- a/src/app/pages/product/product-search/product-search-without-keyword/product-search-without-keyword.component.scss
+++ b/src/app/pages/product/product-search/product-search-without-keyword/product-search-without-keyword.component.scss
@@ -3,15 +3,18 @@
 }
 
 .search-title {
-  font-size: 14px;
-  font-weight: bold;
-  color: gray;
+  font-size: 12px;
+  font-weight: 700;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.2;
+  color: #353535;
 }
 
 .padding-category {
-  padding-top: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-top: 12px;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 .icon-recent-search {
@@ -27,10 +30,14 @@
 }
 
 .clear-recent-search {
-  font-size: 13px;
-  color: gray;
+  font-size: 11px;
+  line-height: 1.25;
+  color: #cbcbcb;
+  border: 1px solid #cbcbcb;
+  border-radius: 12px;
+  padding: 4px 12px;
 }
 
 .padding-item-recent {
-  padding-top: 5px;
+  padding-top: 12px;
 }
