--- a/src/app/pages/product/product-search/product-search.component.scss
+++ b/src/app/pages/product/product-search/product-search.component.scss
@@ -4,5 +4,24 @@
 }
 
 .custom-search {
-  padding: 0;
+  padding-left: 9px;
 }
+
+ion-header {
+  border: none;
+}
+
+ion-searchbar.custom-search {
+  height: 36px;
+  padding: 12px !important;
+  margin-top: -1px;
+
+  .searchbar-input-container input {
+    padding-left: 30px !important;
+    border: solid 0.5px #e5e5e5 !important;
+    border-radius: 5px;
+    background-color: white;
+  }
+}
+
+
