--- a/src/global.scss
+++ b/src/global.scss
@@ -31,8 +31,8 @@
   font-family: 'Metropolis';
 }
 
-:host{
-  --background-focused:unset;
+:host {
+  --background-focused: unset;
 }
 
 .h-100 {
@@ -134,6 +134,7 @@ ion-header {
 
 ion-title {
   font-weight: 700 !important;
+  color: #353535;
 }
 
 ion-item {
@@ -211,10 +212,11 @@ ion-searchbar.custom-search {
   padding-right: 5px;
 
   .searchbar-input-container input {
-  padding-left: 30px !important;
+    padding-left: 30px !important;
     border: solid 0.5px #e5e5e5 !important;
     border-radius: 5px;
     background-color: white;
+    font-size: 13px !important;
   }
 
   // ion-icon {
@@ -385,7 +387,7 @@ ion-searchbar {
 
 .divider {
   height: 8px;
-  margin-top:12px;
+  margin-top: 12px;
   margin-bottom: 12px;
   background-color: #f5f5f5;
 }
