--- a/src/global.scss
+++ b/src/global.scss
@@ -150,6 +150,13 @@ ion-item {
   display: block;
   border-radius: 0.5em;
 }
+.modal-confirm .modal-wrapper {
+  height: 23%;
+  width: 80%;
+  position: absolute;
+  display: block;
+  border-radius: 0.5em;
+}
 
 .modal-add-favorite .modal-wrapper {
   height: 21%;
