--- a/src/app/pages/chat/chat.page.html
+++ b/src/app/pages/chat/chat.page.html
@@ -25,7 +25,7 @@
     </ion-col>
   </ion-row>
 </ion-content>
-<ion-footer>
+<ion-footer class="ion-no-border">
   <ion-row>
     <ion-col class="ion-padding-horizontal">
       <ion-button color="success" expand="block" (click)="goToChat()"> {{'CHAT_VIA_WHATSAPP' | translate}} </ion-button>
