--- a/src/app/pages/voucher/voucher-list/voucher-list.component.html
+++ b/src/app/pages/voucher/voucher-list/voucher-list.component.html
@@ -5,7 +5,7 @@
       <ion-title class="header-title center-with-back">{{ 'VOUCHER_LIST' | translate }}</ion-title>
     </ion-buttons>
   </ion-toolbar>
-  <ion-toolbar>
+  <ion-toolbar style="padding: 8px 16px">
     <ion-searchbar
       class="custom-search"
       mode="ios"
