--- a/src/app/shared/common/cards/card-voucher/card-voucher.component.html
+++ b/src/app/shared/common/cards/card-voucher/card-voucher.component.html
@@ -5,9 +5,9 @@
   </ion-card-header>
 
   <ion-card-content class="ion-no-padding ion-text-left">
-    <ion-row>
+    <ion-row class="ion-padding-horizontal">
       <ion-col size="7">
-        {{ voucher?.voucher_code }} <br />
+        <span class="text-voucher-code">{{ voucher?.voucher_code }} </span><br />
         <small>{{ 'VALID_UNTIL' | translate }} {{ voucher?.end_date | date: 'longDate' }}</small>
       </ion-col>
       <ion-col size="5" class="ion-text-right ion-align-self-center">
