--- a/src/app/shared/common/cards/card-order/card-order.component.html
+++ b/src/app/shared/common/cards/card-order/card-order.component.html
@@ -52,7 +52,13 @@
     </ion-row>
     <ion-row>
       <ion-col size="12">
-        <ion-button expand="full" shape="round" color="success" class="btn-action">
+        <ion-button
+          expand="full"
+          shape="round"
+          color="success"
+          class="btn-action"
+          (click)="goToDetail(order?.order_id)"
+        >
           {{ 'SEE_DETAIL' | translate }}
         </ion-button>
         <ion-button
