implement select payment method page

--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -131,7 +131,7 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-button expand="block"> {{'PROCEED_TO_PAYMENT' | translate}} </ion-button>
+        <ion-button expand="block" (click)="pay()"> {{'PROCEED_TO_PAYMENT' | translate}} </ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
