--- a/src/app/shared/common/cards/card-article/card-article.component.html
+++ b/src/app/shared/common/cards/card-article/card-article.component.html
@@ -1,12 +1,12 @@
 <ion-card class="ion-no-border ion-no-margin ion-padding-top">
   <ion-card-header class="ion-no-padding">
-    <img src="https://via.placeholder.com/200.png" class="full-width img-header" />
+    <img [src]="article?.feature_image" class="full-width img-header" />
   </ion-card-header>
 
   <ion-card-content class="ion-no-padding ion-text-left">
     <ion-row>
       <ion-col size="12" class="truncate">
-        <ion-text class="article-title">Don't forget to wash strawberries </ion-text>
+        <ion-text class="article-title">{{article?.title}} </ion-text>
       </ion-col>
       <ion-col size="12" class="line-clamp-article">
         <ion-text class="article-desc">
