fix description on article homepage and show article detail

--- a/src/app/shared/common/cards/card-article/card-article.component.html
+++ b/src/app/shared/common/cards/card-article/card-article.component.html
@@ -1,4 +1,4 @@
-<ion-card class="ion-no-border ion-no-margin ion-padding-top">
+<ion-card class="ion-no-border ion-no-margin ion-padding-top" (click)="goToNewsDetail(article)">
   <ion-card-header class="ion-no-padding">
     <img [src]="article?.feature_image" class="full-width img-header" />
   </ion-card-header>
@@ -6,16 +6,14 @@
   <ion-card-content class="ion-no-padding ion-text-left">
     <ion-row>
       <ion-col size="12" class="truncate">
-        <ion-text class="article-title">{{article?.title}} </ion-text>
+        <ion-text class="article-title">{{ article?.title }} </ion-text>
       </ion-col>
       <ion-col size="12" class="line-clamp-article">
         <ion-text class="article-desc">
-          Don't forget to wash strawberries Don't forget to wash strawberries Don't forget to wash strawberries Don't
-          forget to wash strawberries Don't forget to wash strawberries Don't forget to wash strawberries Don't forget
-          to wash strawberries
+          {{ article?.excerpt }}
         </ion-text>
       </ion-col>
-      <ion-col size="12" class="ion-text-right" style="min-height: 22px;">
+      <ion-col size="12" class="ion-text-right" style="min-height: 22px">
         <ion-text class="section-see-all">{{ 'READ_MORE' | translate }}</ion-text>
       </ion-col>
     </ion-row>
