--- a/src/app/pages/article/article-detail/article-detail.component.html
+++ b/src/app/pages/article/article-detail/article-detail.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true" class="ion-no-border">
   <ion-toolbar mode="ios">
     <ion-buttons slot="start" mode="md" class="title">
-      <ion-back-button icon="chevron-back" defaultHref="/article" (click)="goBack()"></ion-back-button>
+      <ion-back-button icon="chevron-back" defaultHref="{{ redirectBack }}" (click)="goBack()"></ion-back-button>
     </ion-buttons>
     <ion-title>{{ article?.title }}</ion-title>
   </ion-toolbar>
@@ -29,7 +29,7 @@
         <ion-card-content class="ion-no-padding ion-text-left">
           <ion-row>
             <ion-col size="12" class="truncate">
-              <ion-text class="article-date">Posted on {{ article?.published_at | date:'short' }} </ion-text>
+              <ion-text class="article-date">Posted on {{ article?.published_at | date: 'short' }} </ion-text>
             </ion-col>
             <ion-col size="12" class="line-clamp-article">
               <ion-text class="article-desc" [innerHTML]="article?.html"> </ion-text>
