--- a/src/app/pages/article/article-list/article-list.component.html
+++ b/src/app/pages/article/article-list/article-list.component.html
@@ -22,25 +22,23 @@
         <ion-card-header class="ion-no-padding">
           <img [src]="article?.feature_image" class="full-width img-header" />
         </ion-card-header>
-      
+
         <ion-card-content class="ion-no-padding ion-text-left">
           <ion-row>
             <ion-col size="12" class="truncate">
-              <ion-text class="article-title">{{article?.title}} </ion-text>
+              <ion-text class="article-title">{{ article?.title }} </ion-text>
             </ion-col>
             <ion-col size="12" class="line-clamp-article">
               <ion-text class="article-desc">
-                {{article?.excerpt}}
+                {{ article?.excerpt }}
               </ion-text>
             </ion-col>
-            <ion-col size="12" class="ion-text-right" style="min-height: 22px;">
+            <ion-col size="12" class="ion-text-right" style="min-height: 22px">
               <ion-text class="section-see-all">{{ 'READ_MORE' | translate }}</ion-text>
             </ion-col>
           </ion-row>
         </ion-card-content>
       </ion-card>
-    </ion-col> 
+    </ion-col>
   </ion-row>
-  
 </ion-content>
-
